# Graphics_LAB

./: ADDING_NEW_PROJECT.md  CMakeLists.txt  README.md
.claude/: settings.local.json
opengl/: basic_camera.h
projects/aeroplane/: CONTROLS.md  main.cpp  pointLight.h
projects/aeroplane/shaders/: fragmentShader.fs  lightShader.fs  lightVertexShader.vs
projects/bulldozer/: main.cpp
projects/bulldozer/shaders/: fragmentShader.fs
projects/curves/: main.cpp
projects/primitives/: 2D_Transformation_and_OpenGL_Primitives.cpp  glad.c  main.cpp  triangle.cpp  windowCreation.cpp
projects/shelf/: main.cpp
projects/village_fair/: Image_detail  README.md  TEXTURE_AND_SKYBOX.md  main.cpp  main_recovered.cpp  walkthrough.md  ~$07039_report.docx
projects/village_fair/include/: BanyanTree.h  CircusTent.h  MiniBanyanForest.h  camera.h  collision.h  lamppost.h  pointLight.h  sphere.h  sphereWithTexture.h
projects/village_fair/shaders/: fragmentShader.fs  fragmentShaderTexture.fs  vertexShader.vs  vertexShaderInstanced.vs
projects/village_fair/src/: bezier_utils.h  callbacks.h  draw_animated.h  draw_boundary.h  draw_carousel.h  draw_ferriswheel.h  draw_player.h  draw_pond_ship.h  draw_props.h  draw_shop_items.h  draw_static.h  draw_umbrella.h  shops1.h  shops2.h  shops3.h
